--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ NODE_ENV=developer
 DB_CONNECTION=mysql
 DB_HOST=localhost
 DB_PORT=3306
-DB_NAME=design_project
+DB_NAME=diary_db
 DB_USERNAME=root
 DB_PASSWORD=
 
